fix: Resolve error in Firebase setup

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-FIREBASE_API_KEY: AIzaSyDsyMjRwgRFvrpLxp1fKPIM-lGaKEZtLWU
-FIREBASE_AUTH_DOMAIN: together-56feb.firebaseapp.com
-FIREBASE_PROJECT_ID: together-56feb
-FIREBASE_STORAGE_BUCKET: together-56feb.appspot.com
-FIREBASE_MESSAGING_SENDER_ID: 925291523914
-FIREBASE_APP_ID: 1:925291523914:web:4421df76250bc7d9bd9bb3
+NEXT_PUBLIC_FIREBASE_API_KEY: AIzaSyDsyMjRwgRFvrpLxp1fKPIM-lGaKEZtLWU
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN: together-56feb.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID: together-56feb
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET: together-56feb.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: 925291523914
+NEXT_PUBLIC_FIREBASE_APP_ID: 1:925291523914:web:4421df76250bc7d9bd9bb3
 
