--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID: together-56feb
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET: together-56feb.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID: 925291523914
 NEXT_PUBLIC_FIREBASE_APP_ID: 1:925291523914:web:4421df76250bc7d9bd9bb3
-MONGO_URI: mongodb+srv://lokeshdhakar1812:lokesh@together-chat.w9tzul8.mongodb.net/together
+MONGODB_URI: mongodb+srv://lokeshdhakar1812:lokesh@together-chat.w9tzul8.mongodb.net/together
 
